--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html prefix="og: https://ogp.me/ns#" lang="en">
+<head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="bootstrap.min.css">
   <title>jakaco</title>
   <link rel="icon" href="favicon.gif" type="image/gif">
+  <meta property="og:title" content=jakaco.xyz" />
 <style>
   body {
     background-color: #000;
