--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="bootstrap.min.css">
   <title>jakaco</title>
   <link rel="icon" href="favicon.gif" type="image/gif">
-  <meta property="og:title" content=jakaco.xyz" />
+  <meta property="og:title" content="jakaco.xyz" />
 <style>
   body {
     background-color: #000;
