--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>jakaco</title>
   <link rel="icon" href="favicon.gif" type="image/gif">
   <meta property="og:title" content="jakaco.xyz" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="pfp.png" />
 <style>
   body {
     background-color: #000;
