--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="favicon.gif" type="image/gif">
   <meta property="og:title" content="jakaco.xyz" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="pfp.png" />
+  <meta property="og:image" content="https://jakaco.xyz/pfp.png" />
 <style>
   body {
     background-color: #000;
