--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="jakaco.xyz the website" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://jakaco.xyz/pfp.png" />
-  <meta property="og:description" content="jakaco was so real for this"
+  <meta property="og:description" content="jakaco was so real for this" />
 <style>
   body {
     background-color: #000;
