--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="favicon.gif" type="image/gif">
   <meta property="og:title" content="jakaco.xyz the website" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://jakaco.xyz/pfp.png" />
+  <meta property="og:image" content="https://jakaco.xyz/mental.png" />
   <meta property="og:description" content="jakaco was so real for this" />
 <style>
   body {
