--- a/index.html
+++ b/index.html
@@ -249,6 +249,13 @@
           .col {
             margin-bottom: 20px;
           }
+		  .custom-btn {
+		  display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 3px;
+          margin-top: 10px;
+		  }
 
           .audio-player {
             position: static;
