--- a/index.html
+++ b/index.html
@@ -123,6 +123,29 @@
         border-top-color: transparent !important;
         border-bottom-color: transparent !important;
       }
+
+      /* Mobile-specific CSS */
+      @media (max-width: 767px) {
+        .center-content {
+          height: auto;
+          padding: 20px;
+        }
+        
+        .content-box {
+          max-width: 100%;
+          background-color: rgba(0, 0, 0, 0.6);
+        }
+
+        .col {
+          margin-bottom: 20px;
+        }
+
+        .audio-player {
+          position: static;
+          transform: none;
+          margin-top: 20px;
+        }
+      }
     </style>
   </head>
 
@@ -226,13 +249,6 @@
           .col {
             margin-bottom: 20px;
           }
-		  .custom-btn {
-		  display: flex;
-          flex-direction: column;
-          align-items: center;
-          gap: 5px;
-          margin-top: 10px;
-		  }
 
           .audio-player {
             position: static;
@@ -243,21 +259,5 @@
         document.head.appendChild(mobileStyle);
       }
     </script>
-	<script>
-	    // Detect if the site is loaded on a mobile device
-    function isMobileDevice() {
-      return /Mobi|Android/i.test(navigator.userAgent);
-    }
-	    // Adjust the layout for mobile devices
-    function adjustLayoutForMobile() {
-      var colElement = document.querySelector('.col-md-7');
-      if (colElement && isMobileDevice()) {
-        colElement.className = 'col-md-12';
-      }
-    }
-
-    // Call the adjustLayoutForMobile function when the page is loaded
-    window.addEventListener('load', adjustLayoutForMobile);
-	</script>
   </body>
 </html>
