--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   </div>
                 </div>
                 <div class="audio-player">
-                  <audio controls="controls" __idm_id__="2572289">
+                  <audio controls autoplay>
                     <source src="gltron.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                   </audio>
