--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                 </div>
                 <div class="col custom-col">
                   <div class="custom-btn">
-                    <img src="150.png" alt="Button Image">
-                    <a href="https://example.com/button3-link" class="btn btn-primary btn-block">idk</a>
+                    <img src="startmc.png" alt="Button Image">
+                    <a href="https://startmc.jakaco.xyz" class="btn btn-primary btn-block">startmc.sh</a>
                   </div>
                 </div>
                 <div class="w-100"></div>
