--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                   <p>Social media links:</p>
                   <div class="card-text">
                     <a href="https://twitter.com/jakaco2" class="btn btn-primary btn-block" target="_blank">Twitter</a>
-                    <button type="button" class="btn btn-primary btn-block" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="jakaco#4517" data-bs-original-title="Discord">Discord</button>
+                    <button type="button" class="btn btn-primary btn-block" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="jakaco" data-bs-original-title="Discord">Discord</button>
                   </div>
                 </div>
               </div>
