--- a/index.html
+++ b/index.html
@@ -179,20 +179,20 @@
                 <div class="w-100"></div>
                 <div class="col custom-col">
                   <div class="custom-btn">
-                    <img src="150.png" alt="Button Image">
-                    <a href="https://example.com/button4-link" class="btn btn-primary btn-block">ill add</a>
+                    <img src="cobalt.png" alt="Button Image">
+                    <a href="https://co.jakaco.xyz" class="btn btn-primary btn-block">cobalt</a>
                   </div>
                 </div>
                 <div class="col custom-col">
                   <div class="custom-btn">
                     <img src="150.png" alt="Button Image">
-                    <a href="https://example.com/button5-link" class="btn btn-primary btn-block">something here</a>
+                    <a href="https://example.com/button5-link" class="btn btn-primary btn-block">i'll add something</a>
                   </div>
                 </div>
                 <div class="col custom-col">
                   <div class="custom-btn">
                     <img src="150.png" alt="Button Image">
-                    <a href="https://example.com/button6-link" class="btn btn-primary btn-block">someday</a>
+                    <a href="https://example.com/button6-link" class="btn btn-primary btn-block">here someday</a>
                   </div>
                 </div>
                 <div class="audio-player">
