--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       }
     </script>
     <script>
-      var audios = [["filename.mp3", "The name of the file fancy name"], ["filename.mp3", "The name of the file fancy name"], ["filename.mp3", "The name of the file fancy name"]];
+      var audios = [["final_wish.mp3", "ooxygen - Final wish"], ["its_not_fair.mp3", "nacho - it's not fair"], ["lexapro_delirium.mp3", "Sewerslvt - Lexapro Delirium"], ["menhera_complex.mp3", "Yumeko - menhera complex"], ["what_we_did_in_the_desert.mp3", "eightiesheadachetape - what we did in the desert"], ["destroy_the_wired.mp3", "TOKYOPILL - DESTROY The Wired"]];
       var chosenAudio = audios[Math.floor(Math.random() * audios.length)];
 
       var audio = document.getElementsByTagName("audio")[0];
