--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                   <h5 class="card-title">Profile pic</h5>
                   <p>Social media links:</p>
                   <div class="card-text">
-                    <a href="https://twitter.com/jakaco2" class="btn btn-primary btn-block" target="_blank">Twitter</a>
+                    <a href="https://mastodon.social/@jakaco" class="btn btn-primary btn-block" target="_blank">Mastodon</a>
                     <button type="button" class="btn btn-primary btn-block" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="jakaco" data-bs-original-title="Discord">Discord</button>
                   </div>
                 </div>
