--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
                 </div>
                 <div class="col custom-col">
                   <div class="custom-btn">
-                    <img src="150.png" alt="Button Image">
-                    <a href="https://example.com/button5-link" class="btn btn-primary btn-block">i'll add something</a>
+                    <img src="lingva.svg" alt="Button Image">
+                    <a href="https://lingva.jakaco.xyz" class="btn btn-primary btn-block">Lingva Translate</a>
                   </div>
                 </div>
                 <div class="col custom-col">
                   <div class="custom-btn">
                     <img src="150.png" alt="Button Image">
-                    <a href="https://example.com/button6-link" class="btn btn-primary btn-block">here someday</a>
+                    <a href="https://example.com/button6-link" class="btn btn-primary btn-block">imagine there is something here</a>
                   </div>
                 </div>
                 <div class="audio-player">
@@ -212,7 +212,7 @@
                   <h5 class="card-title">Profile pic</h5>
                   <p>Social media links:</p>
                   <div class="card-text">
-                    <a href="https://mastodon.social/@jakaco" class="btn btn-primary btn-block" target="_blank">Mastodon</a>
+                    <a href="https://twitter.com/jakaco2" class="btn btn-primary btn-block" target="_blank">Twitter</a>
                     <button type="button" class="btn btn-primary btn-block" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="jakaco" data-bs-original-title="Discord">Discord</button>
                   </div>
                 </div>
