--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                 </div>
                 <div class="col custom-col">
                   <div class="custom-btn">
-                    <img src="150.png" alt="Button Image">
-                    <a href="https://example.com/button6-link" class="btn btn-primary btn-block">imagine there is something here</a>
+                    <img src="dl.png" alt="Button Image">
+                    <a href="https://dl.jakaco.xyz" class="btn btn-primary btn-block">Downloads</a>
                   </div>
                 </div>
                 <div class="audio-player">
