--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="col custom-col">
                   <div class="custom-btn">
                     <img src="goober.gif" alt="Button Image">
-                    <a href="https://bloba.dev/goober" class="btn btn-primary btn-block">⚠️ goober</a>
+                    <a href="https://bloba.dev/apps/goober" class="btn btn-primary btn-block">⚠️ goober</a>
                   </div>
                 </div>
                 <div class="col custom-col">
@@ -185,8 +185,8 @@
                 </div>
                 <div class="col custom-col">
                   <div class="custom-btn">
-                    <img src="lingva.svg" alt="Button Image">
-                    <a href="https://lingva.jakaco.xyz" class="btn btn-primary btn-block">Lingva Translate</a>
+                    <img src="cubert.gif" alt="Button Image">
+                    <a href="https://cubert.jakaco.xyz" class="btn btn-primary btn-block">cubert</a>
                   </div>
                 </div>
                 <div class="col custom-col">
@@ -197,7 +197,7 @@
                 </div>
                 <div class="audio-player">
                   <audio controls autoplay>
-                    <source src="gltron.mp3" type="audio/mpeg">
+                    <source src="funky.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                   </audio>
                   <p class="card-text" id="audio-name">GLTron OST</p>
